[package]
name = "iss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json","multipart", "stream", "form"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0"
tempfile = "3.25.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0.1"
